# swagger/users.swagger.yaml
@@ -10,16 +10,16 @@ paths:
         - 사용자
       summary: 계정 정보 가져오기
       parameters:
-      - name: token
-        in: header
-        required: true
-        schema:
-          properties:
-            Authorization:
-              type: string
-              description: 헤더에 토큰을 입력
+        - name: token
+          in: header
+          required: true
+          schema:
+            properties:
+              Authorization:
+                type: string
+                description: 헤더에 토큰을 입력
       responses:
-        '200':
+        "200":
           description: 계정 정보 가져오기 성공
           content:
             application/json:
@@ -50,7 +50,7 @@ paths:
                       email:
                         type: string
                         example: "hanggildong@naver.com"
-        '400':
+        "400":
           description: 잘못된 요청
           content:
             application/json:
@@ -62,31 +62,31 @@ paths:
                     example: "Invalid request"
 
   /users/info/nickname:
-    post:
+    patch:
       tags:
         - 사용자
       summary: 닉네임 변경하기
       parameters:
-      - name: token
-        in: header
-        required: true
-        schema:
-          properties:
-            Authorization:
-              type: string
-              description: 헤더에 토큰을 입력
-      - name: newNickname
-        in: body
-        description: 변경할 닉네임을 입력합니다.
-        required: true
-        schema:
-          properties:
-            newNickname:
-              type: string
-              description: 변경할 닉네임
-              example: 모오
+        - name: token
+          in: header
+          required: true
+          schema:
+            properties:
+              Authorization:
+                type: string
+                description: 헤더에 토큰을 입력
+        - name: newNickname
+          in: body
+          description: 변경할 닉네임을 입력합니다.
+          required: true
+          schema:
+            properties:
+              newNickname:
+                type: string
+                description: 변경할 닉네임
+                example: 모오
       responses:
-        '200':
+        "200":
           description: 닉네임 변경 성공
           content:
             application/json:
@@ -108,7 +108,7 @@ paths:
                       nickname:
                         type: string
                         example: "Halyn"
-        '400':
+        "400":
           description: 닉네임 변경 실패
           content:
             application/json:
@@ -117,7 +117,7 @@ paths:
                 properties:
                   errorMessage:
                     type: string
-                    example: "Invalid request"                         
+                    example: "Invalid request"
 
   /users/subscription:
     post:
@@ -125,16 +125,16 @@ paths:
         - 사용자
       summary: 구독하기
       parameters:
-      - name: token
-        in: header
-        required: true
-        schema:
-          properties:
-            Authorization:
-              type: string
-              description: 헤더에 토큰을 입력
+        - name: token
+          in: header
+          required: true
+          schema:
+            properties:
+              Authorization:
+                type: string
+                description: 헤더에 토큰을 입력
       responses:
-        '200':
+        "200":
           description: 구독이 성공적으로 시작
           content:
             application/json:
@@ -168,7 +168,7 @@ paths:
                       period:
                         type: string
                         example: "1개월"
-        '400':
+        "400":
           description: 구독 실패
           content:
             application/json:
@@ -184,16 +184,16 @@ paths:
         - 사용자
       summary: 구독 취소
       parameters:
-      - name: token
-        in: header
-        required: true
-        schema:
-          properties:
-            Authorization:
-              type: string
-              description: 헤더에 토큰을 입력
+        - name: token
+          in: header
+          required: true
+          schema:
+            properties:
+              Authorization:
+                type: string
+                description: 헤더에 토큰을 입력
       responses:
-        '200':
+        "200":
           description: 구독 취소
           content:
             application/json:
@@ -227,7 +227,7 @@ paths:
                       endDate:
                         type: string
                         example: "2024-07-28"
-        '400':
+        "400":
           description: 구독 취소 실패
           content:
             application/json:
@@ -237,18 +237,18 @@ paths:
                   errorMessage:
                     type: string
                     example: "Invalid request"
-  /users:
-    delete:
+  /users/delete:
+    patch:
       tags:
         - 사용자
       summary: 회원 탈퇴
       parameters:
-      - name: token
-        in: header
-        description: redis에 저장된 refresh token과 db에 저장된 유저 관련 데이터들을 삭제
-        required: true
+        - name: token
+          in: header
+          description: redis에 저장된 refresh token과 db에 저장된 유저 관련 데이터들을 삭제
+          required: true
       responses:
-        '200':
+        "200":
           description: 회원탈퇴 성공
           content:
             application/json:
@@ -261,8 +261,8 @@ paths:
                   message:
                     type: string
                     example: 회원탈퇴 성공
-                  
-        '400':
+
+        "400":
           description: 회원 탈퇴 실패
           content:
             application/json:
@@ -272,19 +272,19 @@ paths:
                   errorMessage:
                     type: string
                     example: "Invalid request"
-  
+
   /users/logout:
     get:
       tags:
         - 사용자
       summary: 로그아웃
       parameters:
-      - name: token
-        in: header
-        description: redis에 저장된 refreshToken을 삭제
-        required: true
+        - name: token
+          in: header
+          description: redis에 저장된 refreshToken을 삭제
+          required: true
       responses:
-        '200':
+        "200":
           description: 로그아웃 성공 시 로그인 페이지로 리디렉션
           content:
             application/json:
@@ -297,7 +297,7 @@ paths:
                   message:
                     type: string
                     example: 로그아웃 성공
-        '400':
+        "400":
           description: 로그아웃 실패
           content:
             application/json:
